2008-06-13  Matthias Clasen  <mclasen@redhat.com>

	* gtk/gtkfilesystem.c: Avoid PLT entries by including
	gtkalias.h

2008-06-13  Matthias Clasen  <mclasen@redhat.com>

	* gtk/gtkfilechooserbutton.c:
	* gtk/gtkfilechooserdefault.c:
	* gtk/gtkfilechooserentry.c:
	* gtk/gtkfilesystem.c:
	* gtk/gtkfilesystem.h:
	* gtk/gtkfilesystemmodel.c:
	* gtk/gtkpathbar.c: Really make GtkFileSystem private
	by _-prefixing all functions.

2008-06-13  Matthias Clasen  <mclasen@redhat.com>

	* docs/RELEASE-HOWTO: Updates
	* INSTALL.in: Bump version

2008-06-13  Matthias Clasen  <mclasen@redhat.com>

	* NEWS: Updates

2008-06-13  Michael Natterer  <mitch@imendio.com>

	* gtk/gtkcellrendereraccel.h
	* gtk/gtkfilechooser.h
	* gtk/gtkfilechooserdialog.h
	* gtk/gtkfilechooserwidget.h
	* gtk/gtkmenutoolbutton.h
	* gtk/gtkpagesetup.h
	* gtk/gtkpapersize.h
	* gtk/gtkprintcontext.h
	* gtk/gtkprintoperation.h
	* gtk/gtkprintoperationpreview.h
	* gtk/gtkprintsettings.h
	* gtk/gtkradiotoolbutton.h
	* gtk/gtkrecentchooser.h
	* gtk/gtkrecentchooserdialog.h
	* gtk/gtkrecentchoosermenu.h
	* gtk/gtkrecentchooserwidget.h
	* gtk/gtkseparatortoolitem.h
	* gtk/gtkshow.h
	* gtk/gtktoggletoolbutton.h
	* gtk/gtktoolbar.h
	* gtk/gtktoolbutton.h
	* gtk/gtktooltip.h: #include <gtk/gtkfoo.h> instead of
	"gtk/gtkfoo.h" or even just "gtkfoo.h" in public headers.

2008-06-13  Michael Natterer  <mitch@imendio.com>

	* gtk/gtktexttagtable.h: remove double inclusion of
	<gtk/gtktexttag.h>.

2008-06-13  Michael Natterer  <mitch@imendio.com>

	* gtk/gtkaction.c (gtk_action_set_short_label): change type of
	local "image" variable from GtkImage to GtkWidget to fix warning.

2008-06-13  Michael Natterer  <mitch@imendio.com>

	* gtk/gtkcombobox.c (gtk_combo_box_menu_position): cast menu's
	toplevel to GtkWindow when passing to gtk_window_set_type_hint().

2008-06-13  Michael Natterer  <mitch@imendio.com>

	* gtk/gtkuimanager.c (start_element_handler): silently skip